# basic-voxel-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ManagedCode.targets  README.md  basic-voxel-engine.sln  lgtm.yml  managed.cmake  vkvia.html
.github/workflows/: build.yml
BasicVoxelEngine/: Application.cs  AssetManager.cs  BasicVoxelEngine.csproj  Block.cs  BlockItem.cs  Buffer.cs  ContentLoader.cs  Entity.cs  Helpers.cs  InputManager.cs  Item.cs  ItemStack.cs  Logger.cs  Model.cs  Registry.cs  Renderer.cs  Script.cs  Vector2.cs  Vector3.cs  Window.cs  World.cs
BasicVoxelEngine.Content/: BVEContentLoader.cs  BasicVoxelEngine.Content.csproj  ManagedBlock.cs  WorldGenSteps.cs
BasicVoxelEngine.Content/Blocks/: Air.cs  BasicBlocks.cs  Dirt.cs  Grass.cs  ManagedBlock.cs  ModelBlock.cs  TestBlocks.cs  TestLight.cs
BasicVoxelEngine.Content/Items/: BlockItems.cs  TestItem.cs
BasicVoxelEngine.Content/Scripts/: Player.cs  UserInterfaceController.cs
BasicVoxelEngine/Components/: CameraComponent.cs  ScriptComponent.cs  TransformComponent.cs
BasicVoxelEngine/Graphics/: ComputePipeline.cs  Context.cs  Factory.cs  Shader.cs  StorageBuffer.cs  Texture.cs  UniformBuffer.cs
BasicVoxelEngine/Lighting/: Light.cs  PointLight.cs  Spotlight.cs
BasicVoxelEngine/WorldGen/: Builder.cs  GenerationStepAttribute.cs
cmake/: FindD3D12.cmake  Findmono.cmake
scripts/: cmake_options.py  setup_vulkan.py
src/: .gitignore  CMakeLists.txt  main.cpp
src/assets/shaders/: fragment.glsl  static.glsl  static.hlsl  testcompute.glsl  ui.glsl  vertex.glsl
src/assets/shaders/compute/: get_face_direction.glsl
src/include/: application.h  asset_manager.h  block.h  buffer.h  bve_pch.h  code_host.h  components.h  input_manager.h  mesh_factory.h  model.h  ref.h  registry.h  renderer.h  script.h  shader.h  shader_parser.h  texture.h  texture_atlas.h  util.h  window.h  world.h
src/include/graphics/: buffer.h  compute_pipeline.h  context.h  object_factory.h  pipeline.h  shader.h  storage_buffer.h  texture.h  uniform_buffer.h  vao.h
src/include/lighting/: light.h  point_light.h  spotlight.h
src/lib/: application.cpp  asset_manager.cpp  block.cpp  buffer.cpp  code_host.cpp  input_manager.cpp  mesh_factory.cpp  model.cpp  renderer.cpp  script_wrappers.cpp  script_wrappers.h  shader.cpp  shader_compiler.cpp  shader_compiler.h  shader_parser.cpp  texture.cpp  texture_atlas.cpp  window.cpp  world.cpp
src/lib/graphics/: object_factory.cpp
src/lib/graphics/directx12/: dx12_command_queue.cpp  dx12_command_queue.h  dx12_context.cpp  dx12_context.h  dx12_object_factory.cpp  dx12_object_factory.h  dx12_util.h
src/lib/graphics/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_object_factory.cpp  opengl_object_factory.h  opengl_pipeline.cpp  opengl_pipeline.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vao.cpp  opengl_vao.h
src/lib/graphics/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.h  vulkan_context.cpp  vulkan_context.h  vulkan_extensions.cpp  vulkan_extensions.h  vulkan_object_factory.cpp  vulkan_object_factory.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_storage_buffer.cpp  vulkan_storage_buffer.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_uniform_buffer.cpp  vulkan_uniform_buffer.h
src/lib/lighting/: point_light.cpp  spotlight.cpp
src/src/: main.cpp  player.cpp  player.h
